Enhance model structure
